# networksdb

./: README.md  __init__.py  api_specification.md  check_data_structure.py  check_parquet_data.py  debug_dataframe_columns.py  diagram.md  drop_iceberg_tables.py  generate_csv.py  insert_into_trino.py  large_test.csv  network_analysis.db  network_relationships.parquet  pyproject.toml  setup.py  test_data.csv  test_data_types.py  test_default_dup.csv  test_high_dup.csv  test_large_dup.csv  test_mixed.csv  test_no_dup.csv  test_private.csv  test_public.csv  verify_iceberg_schema.py
data/: 50k_public.csv  duplicate_data.csv  email_data.csv  email_data_1.csv  large_test.csv  mixed_test.csv  network_data.csv  network_data.parquet  private_test.csv  test_output.csv
neo/: config.yml  config.yml~  trino.yml
neo_docker/: docker-compose.yml
output/: deduplicated_nodes.parquet  deduplicated_relationships.parquet  nodes.jsonl  relationships.jsonl
parsers/: email_mapping.yaml  email_parser.yaml  email_parser2.yaml  network_discovery.yaml  parser.yaml  polars.yaml  polars_email.yaml  polars_iceberg.yaml  polars_template.yaml  polars_template_json.yaml  trino.yaml  trino_read.yaml  trino_template.yaml  trino_test.yaml
schemas/: schema.yaml  schemav2.yaml
src/: __init__.py
src/networksd/: indexes.py  registry.py  sql_metadata.py
src/networksdb/: __init__.py  constants.py  sql_metadata.py
trino_docker/: docker-compose.yml
version2/: neo.yaml  schema.yaml
version2/network/: csv_neo.yaml  direct_neo.yaml  network_resolved.json  parser_config.yaml  schema.yaml
(+34 files in other folders)
